fix:resolve overlap between connect button and wallet dialog

--- a/src/components/EffectCardSwiper/EffectCardSwiper.module.css
+++ b/src/components/EffectCardSwiper/EffectCardSwiper.module.css
@@ -1,6 +1,6 @@
 .swiperButtonNext,
 .swiperButtonPrev {
-    @apply absolute z-20 flex items-center justify-center w-16 h-16 rounded-full cursor-pointer top-1/2;
+    @apply absolute z-[2] flex items-center justify-center w-16 h-16 rounded-full cursor-pointer top-1/2;
     background: rgba(143, 131, 131, 0.2);
     backdrop-filter: blur(18px);
     transform: translateY(-50%)
